<resources>
    <string name="app_name">TinderTP</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_chage_picture">Cambiar foto de perfil</string>
    <string name="action_my_profile">Mi perfil</string>
    <string name="action_edit_profile">Editar mi perfil</string>
    <string name="action_delete_profile">Eliminar perfil</string>
    <string name="title_activity_registro">TinderTP</string>
    <string name="title_activity_matching">TinderTP</string>
    <string name="title_activity_full_screen_view">TinderTP</string>
    <string name="title_activity_profile">TinderTP</string>
    <string name="title_activity_login">TinderTP</string>
    <string name="title_activity_select_login_or_registry">TinderTP</string>
    <string name="title_activity_main">TinderTP</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="error_image_profile">Error al cargar la imagen de perfil.</string>
    <string name="no_network">No hay conexión de red disponible.</string>
    <string name="comidas">Comidas favoritas</string>
    <string name="comidas_text">Comidas:</string>
    <string name="sexo">Sexo</string>
    <string name="valid_pass">Valida la contraseña</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="category_void">------</string>
    <string name="sexo_text">Sexo:</string>
    <string name="musica">Estilo de músca favorito</string>
    <string name="musica_text">Música:</string>
    <string name="bandas">Bandas favoritas</string>
    <string name="bandas_text">Bandas:</string>
    <string name="deportes">Deporte favorito</string>
    <string name="deportes_text">Deportes:</string>
    <string name="actividades">Al aire libre</string>
    <string name="actividades_text">Actividades:</string>
    <string name="viajes">Viajes</string>
    <string name="viajes_text">Viajes:</string>
    <string name="agregar_item">Agregar otro</string>
    <string name="title_activity_interests">InterestsActivity</string>
    <string name="reload">reload</string>
    <string name="get_more">Carga mensajes anteriores.</string>
    <string name="mssg">msj</string>
    <string name="fire">fire</string>
    <string name="txt">txt</string>
    <string name="registrarse">Registrarse</string>
    <string name="add_more_interests">Agregar más intereses</string>
    <string name="add_new_interests">Agregar nuevos intereses:</string>
    <string name="are_you_sure">¿Esta seguro que desea borrar su perfil de forma permanente? \n (No tiene vuelta atras)</string>

    <string name="login">Login</string>
    <string name="separator">: </string>
    <string name="nombre">Nombre</string>
    <string name="add_category">Nueva categoria</string>
    <string name="add_interest">Interés</string>
    <string name="url">URL</string>
    <string name="enviar">Enviar</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="usuario">Usuario</string>
    <string name="alias">Alias</string>
    <string name="alias_text">Alias:</string>
    <string name="edad">Edad</string>
    <string name="edad_text">Edad:</string>
    <string name="mostrar_pass">Mostrar contraseña.</string>
    <string name="nombre_">Nombre:</string>
    <string name="intereces">Intereses:</string>
    <string name="modify">Modificar</string>
    <string name="add_name">Ingrese su nombre.</string>
    <string name="add_alias">Ingrese un alias.</string>
    <string name="espere">Por favor, espere mientras se conecta a la red.</string>
    <string name="title_activity_add_picture">AddPictureActivity</string>
    <string name="title_activity_inter">InterActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_are_you_sure">AreYouSureActivity</string>
</resources>
