<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView1"
    android:layout_gravity="center_horizontal"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegistryActivity"
    android:background="@drawable/gradient_background"
    tools:showIn="@layout/activity_registro">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/nombre"
        android:ems="10"
        android:id="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/email_text"
        android:layout_alignStart="@+id/email_text"
        android:layout_marginTop="45dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_text"
        android:text=""
        android:hint="@string/email"
        android:layout_above="@+id/radioButton"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPassword1"
        android:text=""
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:layout_above="@+id/checkBox"
        android:layout_alignLeft="@+id/email_text"
        android:layout_alignStart="@+id/email_text"
        android:layout_alignRight="@+id/age"
        android:layout_alignEnd="@+id/age" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:onClick="goToInterests"
        android:id="@+id/button3"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_pass"
        android:id="@+id/checkBox"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textPassword1"
        android:layout_alignStart="@+id/textPassword1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:onClick="salir2"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mujer"
        android:id="@+id/radioButton"
        android:checked="false"
        android:layout_above="@+id/textPassword1"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hombre"
        android:id="@+id/radioButton2"
        android:checked="false"
        android:layout_above="@+id/textPassword1"
        android:layout_toLeftOf="@+id/radioButton"
        android:layout_toStartOf="@+id/radioButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alias"
        android:hint="@string/alias"
        android:layout_below="@+id/name"
        android:layout_alignRight="@+id/name"
        android:layout_alignEnd="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/age"
        android:hint="@string/edad"
        android:layout_below="@+id/alias"
        android:layout_alignLeft="@+id/email_text"
        android:layout_alignStart="@+id/email_text" />

</RelativeLayout>
</ScrollView>