<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/gradient_background"
    android:fillViewport="false">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.sebastian.tindertp.InterestsActivity"
        tools:showIn="@layout/activity_interests">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/musica_text"
            android:id="@+id/textView11"
            android:layout_marginTop="39dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:hint="@string/musica"
            android:inputType="text"
            android:layout_below="@+id/textView11"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageView5"
            android:layout_toLeftOf="@+id/imageView5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/more"
            android:onClick="more"
            android:contentDescription="@string/agregar_item"
            android:layout_alignTop="@+id/editText4"
            android:layout_toRightOf="@+id/editText4"
            android:layout_toEndOf="@+id/editText4"
            android:layout_alignBottom="@+id/editText4"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bandas_text"
            android:id="@+id/textView10"
            android:layout_below="@+id/editText4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText5"
            android:hint="@string/bandas"
            android:inputType="text"
            android:layout_below="@+id/textView10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageView6"
            android:layout_toLeftOf="@+id/imageView6" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/more"
            android:contentDescription="@string/agregar_item"
            android:onClick="more"
            android:layout_alignTop="@+id/editText5"
            android:layout_toRightOf="@+id/editText5"
            android:layout_toEndOf="@+id/editText5"
            android:layout_alignBottom="@+id/editText5"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/deportes_text"
            android:id="@+id/textView12"

            android:layout_below="@+id/editText5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText6"
            android:hint="@string/deportes"
            android:layout_below="@+id/textView12"
            android:inputType="text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageView7"
            android:layout_toLeftOf="@+id/imageView7" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@drawable/more"
            android:onClick="more"
            android:contentDescription="@string/agregar_item"
            android:layout_alignTop="@+id/editText6"
            android:layout_toRightOf="@+id/editText6"
            android:layout_toEndOf="@+id/editText6"
            android:layout_alignBottom="@+id/editText6"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sexo_text"
            android:id="@+id/textView13"
            android:layout_below="@+id/editText6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText7"
            android:hint="@string/sexo"
            android:inputType="text"
            android:layout_below="@+id/textView13"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageView8"
            android:layout_toLeftOf="@+id/imageView8" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@drawable/more"
            android:onClick="more"
            android:contentDescription="@string/agregar_item"
            android:layout_alignTop="@+id/editText7"
            android:layout_toRightOf="@+id/editText7"
            android:layout_toEndOf="@+id/editText7"
            android:layout_alignBottom="@+id/editText7"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/actividades_text"
            android:id="@+id/textView14"
            android:layout_below="@+id/editText7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText8"
            android:hint="@string/actividades"
            android:inputType="text"
            android:layout_below="@+id/textView14"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageView9"
            android:layout_toLeftOf="@+id/imageView9" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:src="@drawable/more"
            android:onClick="more"
            android:contentDescription="@string/agregar_item"
            android:layout_alignTop="@+id/editText8"
            android:layout_toRightOf="@+id/editText8"
            android:layout_toEndOf="@+id/editText8"
            android:layout_alignBottom="@+id/editText8"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/viajes_text"
            android:id="@+id/textView15"
            android:layout_below="@+id/editText8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText9"
            android:hint="@string/viajes"
            android:inputType="text"
            android:layout_below="@+id/textView15"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageView10"
            android:layout_toLeftOf="@+id/imageView10" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView9"
            android:src="@drawable/more"
            android:onClick="more"
            android:contentDescription="@string/agregar_item"
            android:layout_alignTop="@+id/editText9"
            android:layout_toRightOf="@+id/editText9"
            android:layout_toEndOf="@+id/editText9"
            android:layout_alignBottom="@+id/editText9"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/comidas_text"
            android:id="@+id/textView16"
            android:layout_below="@+id/editText9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText10"
            android:hint="@string/comidas"
            android:inputType="text"
            android:layout_below="@+id/textView16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/button8"
            android:layout_alignEnd="@+id/button8" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView10"
            android:src="@drawable/more"
            android:onClick="more"
            android:contentDescription="@string/agregar_item"
            android:layout_alignTop="@+id/editText10"
            android:layout_toRightOf="@+id/editText10"
            android:layout_toEndOf="@+id/editText10"
            android:layout_alignBottom="@+id/editText10"
            android:padding="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrarse"
            android:id="@+id/button8"
            android:onClick="goToRegister"
            android:layout_below="@+id/editText10"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:layout_below="@+id/button8"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>